included topMostElementCheck & integration tests.
Change-Id: I0ddd40e6ca67917ca5d99898ab1a2ed4c2c288f4